--- a/app/src/main/res/menu/fragment_crime_list.xml
+++ b/app/src/main/res/menu/fragment_crime_list.xml
@@ -6,10 +6,12 @@
         android:id="@+id/menu_item_new_crime"
         android:icon="@mipmap/ic_menu_add"
         android:title="@string/new_crime"
-        app:showAsAction="ifRoom|withText"
-
-
-        />
+        app:showAsAction="ifRoom|withText"/>
+    <item
+        android:id="@+id/menu_item_show_subtitle"
+        android:title="@string/show_subtitle"
+        app:showAsAction="ifRoom"
+        ></item>
 
 
 
