--- a/app/src/main/res/layout/view_camera_and_title.xml
+++ b/app/src/main/res/layout/view_camera_and_title.xml
@@ -18,7 +18,7 @@
             android:layout_height="80dp"
             android:id="@+id/crime_photo"
             android:scaleType="centerInside"
-            android:background="@android:color/holo_blue_dark"
+            android:background="@color/button_material_light"
             android:cropToPadding="true"
             />
         <ImageButton
